rust/herb-highlighter/tests/snapshots/highlighter_test__handles_all_ruby_keywords_correctly.snap
---
source: herb-highlighter/tests/highlighter_test.rs
expression: "highlighted.join(\"\\n\")"
---
[38;2;190;80;70m<%[0m [38;2;198;120;221mif[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221munless[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221melse[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221melsif[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mend[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mdef[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mclass[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mmodule[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mreturn[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221myield[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mbreak[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mnext[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mcase[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mwhen[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mthen[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mwhile[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221muntil[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mfor[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221min[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mdo[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mbegin[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mrescue[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mensure[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mretry[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mraise[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221msuper[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mself[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mnil[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mtrue[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mfalse[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mand[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mor[0m [38;2;190;80;70m%>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mnot[0m [38;2;190;80;70m%>[0m
