rust/herb-highlighter/tests/snapshots/highlighter_test__highlight_content_works_with_default_theme.snap
---
source: herb-highlighter/tests/highlighter_test.rs
expression: result
---
[36m[0m

    [90m  1[0m [90m│[0m [38;2;190;80;70m<%[0m [38;2;198;120;221mdef[0m hello [38;2;190;80;70m%>[0m[38;2;224;108;117m<[0m[38;2;224;108;117mspan[0m[38;2;224;108;117m>[0m[38;2;171;178;191mHi[0m[38;2;224;108;117m</[0m[38;2;224;108;117mspan[0m[38;2;224;108;117m>[0m[38;2;190;80;70m<%[0m [38;2;198;120;221mend[0m [38;2;190;80;70m%>[0m
