rust/herb-highlighter/tests/snapshots/highlighter_test__highlight_file_works_with_default_theme.snap
---
source: herb-highlighter/tests/highlighter_test.rs
expression: "result.replace(&*file.to_string_lossy(), \"<test-file>\")"
---
[36m<test-file>[0m

    [90m  1[0m [90m│[0m [38;2;224;108;117m<[0m[38;2;224;108;117mh1[0m[38;2;224;108;117m>[0m
    [90m  2[0m [90m│[0m   [38;2;190;80;70m<%[0m [38;2;198;120;221munless[0m condition [38;2;190;80;70m%>[0m
    [90m  3[0m [90m│[0m     [38;2;224;108;117m<[0m[38;2;224;108;117mp[0m[38;2;224;108;117m>[0m[38;2;171;178;191mDefault[0m [38;2;171;178;191mcontent[0m[38;2;224;108;117m</[0m[38;2;224;108;117mp[0m[38;2;224;108;117m>[0m
    [90m  4[0m [90m│[0m   [38;2;190;80;70m<%[0m [38;2;198;120;221mend[0m [38;2;190;80;70m%>[0m
    [90m  5[0m [90m│[0m [38;2;224;108;117m</[0m[38;2;224;108;117mh1[0m[38;2;224;108;117m>[0m
