rust/herb-highlighter/tests/snapshots/highlighter_test__highlights_a_file.snap
---
source: herb-highlighter/tests/highlighter_test.rs
expression: "result.replace(&*directory.path().to_string_lossy(), \"<test-dir>\")"
---
[36m<test-dir>/test-highlighter-file.html.erb[0m

    [90m  1[0m [90m│[0m [38;2;224;108;117m<[0m[38;2;224;108;117mdiv[0m [38;2;209;154;102mclass[0m[38;2;86;182;194m=[0m[38;2;152;195;121m"[0m[38;2;152;195;121mcontainer[0m[38;2;152;195;121m"[0m[38;2;224;108;117m>[0m
    [90m  2[0m [90m│[0m   [38;2;190;80;70m<%[0m [38;2;198;120;221mif[0m user [38;2;190;80;70m%>[0m
    [90m  3[0m [90m│[0m     [38;2;224;108;117m<[0m[38;2;224;108;117mspan[0m[38;2;224;108;117m>[0m[38;2;171;178;191mHello[0m [38;2;190;80;70m<%=[0m user.name [38;2;190;80;70m%>[0m[38;2;198;120;221m![0m[38;2;224;108;117m</[0m[38;2;224;108;117mspan[0m[38;2;224;108;117m>[0m
    [90m  4[0m [90m│[0m   [38;2;190;80;70m<%[0m [38;2;198;120;221mend[0m [38;2;190;80;70m%>[0m
    [90m  5[0m [90m│[0m [38;2;224;108;117m</[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m
