rust/herb-highlighter/tests/snapshots/highlighter_test__highlights_basic_html_tags.snap
---
source: herb-highlighter/tests/highlighter_test.rs
expression: "highlighter(\"onedark\").highlight(\"test.erb\", \"<h1>Hello</h1>\", &plain())"
---
[38;2;224;108;117m<[0m[38;2;224;108;117mh1[0m[38;2;224;108;117m>[0m[38;2;171;178;191mHello[0m[38;2;224;108;117m</[0m[38;2;224;108;117mh1[0m[38;2;224;108;117m>[0m
