rust/herb-highlighter/tests/snapshots/highlighter_test__highlights_complex_erb_with_if_elsif_else_end.snap
---
source: herb-highlighter/tests/highlighter_test.rs
expression: "highlighter(\"onedark\").highlight(\"test.erb\", input, &plain())"
---
[38;2;190;80;70m<%[0m [38;2;198;120;221mif[0m condition [38;2;190;80;70m%>[0m
    [38;2;224;108;117m<[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m[38;2;171;178;191mOne[0m[38;2;224;108;117m</[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221melsif[0m other [38;2;190;80;70m%>[0m
    [38;2;224;108;117m<[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m[38;2;171;178;191mTwo[0m[38;2;224;108;117m</[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221melse[0m [38;2;190;80;70m%>[0m
    [38;2;224;108;117m<[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m[38;2;171;178;191mThree[0m[38;2;224;108;117m</[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m
[38;2;190;80;70m<%[0m [38;2;198;120;221mend[0m [38;2;190;80;70m%>[0m
